# clogenai_academy_data_eng_training

./: .gitignore  README.md  Week2_Ingest_Explore_PySpark.ipynb  pyproject.toml
sample_data/: README.md  data_generator.py  orders.csv  orders_with_issues.csv  products.json
week1/: week1.md
week10/: week10_live_demo.py  week10_live_session_guide.md
week11/: week11_live_demo.py  week11_live_session_guide.md
week12-13/: capstone_success_guide.md  final_certification_checklist.md  week12-13_kickoff_session_guide.md  week12-13_project_specification.md  week12-13_submission_guidelines.md
week2/: Week2_Ingest_Explore_PySpark.py  week2.md
week3/: Week3_Spark_PySpark_Programming.ipynb  week3.md
week4/: Week4_PySpark_Transformations_Modeling.ipynb  week4-extra.md  week4.md
week5/: Week5_Data_Quality_Validations.ipynb  week5-extra.md  week5.md
week6/: Week6_Dataflows_Lineage_Orchestration_Automation.ipynb  week6.md
week7/: Week7_Live_Demo_Notebook.py  Week7_Live_Session.md
week8/: week8_dashboard_complete.ipynb  week8_dashboard_complete.py  week8_live_demo.ipynb  week8_live_demo.py  week8_live_session_guide.md
week9/: week9_live_demo.py  week9_live_session_guide.md
