[project]
name = "week2"
version = "0.1.0"
description = ""
authors = [
    {name = "MN Clovation",email = "mn@clovation.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-pptx (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
